[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cashcov"
version = "0.2.0"
description = "Pure-Python Redis cache with background refresh, stampede protection, and FastAPI integration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["redis", "cache", "caching", "background-refresh", "fastapi", "stampede"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    "redis>=5.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.110",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "pytest-cov",
    "fakeredis>=2.23",
    "httpx>=0.27",
    "fastapi>=0.110",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-redis",
]

[project.urls]
Homepage = "https://github.com/Hossein-Roshandel/cashcov"
Repository = "https://github.com/Hossein-Roshandel/cashcov"

# ---------------------------------------------------------------------------
# Hatch build — pure Python, src layout
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/cashcov"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
filterwarnings = [
    "ignore::DeprecationWarning:fakeredis",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cashcov"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
packages = ["cashcov"]
