[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cashcov"
version = "0.1.0"
description = "Python bindings for the cashcov Redis cache library (CGo shared library)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["redis", "cache", "caching", "cashcov"]

[project.urls]
Homepage = "https://github.com/Hossein-Roshandel/cashcov"
Repository = "https://github.com/Hossein-Roshandel/cashcov"
"Bug Tracker" = "https://github.com/Hossein-Roshandel/cashcov/issues"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]

# No Python runtime dependencies.  The shared library (libcashcov.so /
# libcashcov.dylib / cashcov.dll) is compiled from Go source and bundled
# inside the wheel automatically by the hatch_build.py build hook.
# Installing from source requires Go 1.21+ and a C compiler on PATH.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

# ---------------------------------------------------------------------------
# Build hook: compiles the CGo shared library during `pip install` / `uv add`
# ---------------------------------------------------------------------------
[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
# The compiled library is registered dynamically by the build hook above.
# No static artifact list is needed here.

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long — handled by ruff-format
]

[tool.ruff.lint.isort]
known-first-party = ["cashcov"]
